Fixed font color between collapsed and regular dropdown menu

--- a/core/static/roca/sass/roca.scss
+++ b/core/static/roca/sass/roca.scss
@@ -172,6 +172,7 @@ img {
 				.dropdown ul.dropdown-menu {
 					background: none;
 					a {
+						color: #eee;
 						font-weight: normal;
 					}
 					a:hover {
@@ -195,7 +196,7 @@ img {
 					background: white;
 					li a {
 						text-align: left;
-						color: #D0D0D0;
+						color: #A5A5A5;
 					}
 				}
 			}
